[package]
name = "raycaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bresenham = "0.1.1"
env_logger = "0.10.0"
glam = { version = "0.23.0", features = ["serde"]}
image = "0.24.5"
log = "0.4.17"
pollster = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.15.1"
winit = "0.28"
